--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Igor D. Rangel</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link href="/assets/profile.jpg" rel="icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
