--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<meta content="#212121" name="theme-color">
+	<meta content="#6A1B9A" name="theme-color">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
